tests/ui/g-typed-route-duplicate-label.stderr
error[E0277]: `g::route(left, right)` arms must use distinct labels
 --> tests/ui/g-typed-route-duplicate-label.rs:6:22
  |
6 |     let _ = g::route(arm_one, arm_two);
  |                      ^^^^^^^ route arms reuse the same label
  |
  = help: the trait `hibana::global::DistinctRouteLabel<hibana::global::LabelMarker<5>>` is not implemented for `hibana::global::LabelMarker<5>`
note: required by a bound in `route`
 --> src/global.rs
  |
  | pub const fn route<LeftSteps, RightSteps>(
  |              ----- required by a bound in this function
...
  |     <LeftSteps as RouteArmHead>::Label: DistinctRouteLabel<<RightSteps as RouteArmHead>::Label>,
  |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route`
